--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,13 @@
-
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+body{
+    margin-top: 100px;
+}
+h1{
+    text-align: center;
+}
+input{
+    border: none;
+    width: 100%;
+}
+ul li{
+    list-style: none;
+}
